--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.7",
+    "cloudinary": "^2.7.0",
     "framer-motion": "^12.12.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
